hphp/hack/test/typecheck/goto/goto_into_finally.php
<?hh // partial

function gotoReferencingLabelInFinally($condition): void {
  goto L0;

  try {
  } finally {
    L0:
  }
}
